--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 title: "Deepali Thakur's Portfolio"
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 description: "Showcasing my projects and skills in data science and analytics."
