--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -8,11 +8,16 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: 3.1 # Match the Ruby version in your Gemfile.lock
+    - name: Install dependencies
+      run: bundle install
     - name: Build the site in the jekyll/builder container
       run: |
         docker run \
